# cortex

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .npmrc  .release-please-manifest.json  .semgrepignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev.alpine  LICENSE  README.md  SECURITY.md  codecov.yml  exploration.md  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-body.md  release-please-config.json  rust-toolchain.toml  rustfmt.toml  sonar-project.properties
apps/rook/: CHANGELOG.md  Cargo.toml  Dockerfile  build.rs
apps/rook/dashboard/: README.md  build.sh  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/rook/dashboard/e2e/: api-keys.spec.ts  global-setup.ts  login.spec.ts  providers.spec.ts  vue.spec.ts
apps/rook/dashboard/public/icons/: manifest.json
apps/rook/dashboard/src/: main.ts  style.css
apps/rook/dashboard/src/__tests__/: App.spec.ts  providersI18n.spec.ts
apps/rook/dashboard/src/components/: AddProviderDialog.spec.ts  AddProviderDialog.vue  ApiKeyForm.spec.ts  ApiKeyForm.vue  AppSidebar.vue  ConnectionListItem.vue  CopyButton.spec.ts  CopyButton.vue  DataTable.vue  EmptyState.vue  ErrorBanner.vue  KeyDisplayCard.vue  LoadingState.vue  MethodBadge.vue  NavMain.vue  NavProjects.vue  NavSecondary.vue  NavUser.vue  PageHeader.vue  Pagination.spec.ts  Pagination.vue  PasswordInput.spec.ts  PasswordInput.vue  ProviderCatalogCard.vue  ProviderCatalogFilter.vue  ProviderCategorySection.vue  ProviderIcon.spec.ts  ProviderIcon.vue  StatusBadge.spec.ts  StatusBadge.vue
apps/rook/dashboard/src/composables/: useApiKeys.ts  useAvailableModels.spec.ts  useAvailableModels.ts  useBaseUrl.ts  useHealth.ts  useNavigation.ts  useProviderCatalog.ts  useProviders.ts  useProvidersQuota.ts
apps/rook/dashboard/src/config/: endpoints.ts  navigation.ts  providerCatalog.ts  scopes.spec.ts  scopes.ts
apps/rook/dashboard/src/i18n/: index.ts
apps/rook/dashboard/src/lib/: api.spec.ts  api.ts
apps/rook/dashboard/src/locales/: en.json  es.json
apps/rook/dashboard/src/router/: index.spec.ts  index.ts
apps/rook/dashboard/src/stores/: auth.spec.ts  auth.ts  counter.ts  theme.ts
apps/rook/dashboard/src/types/: lucide-icons.d.ts  unovis.d.ts
apps/rook/dashboard/src/views/: ApiKeysView.spec.ts  ApiKeysView.vue  CombosView.vue  EndpointsView.vue  HomeView.vue  LoginView.spec.ts  LoginView.vue  ProviderDetailsView.spec.ts  (+4 more)
apps/rook/npm/rook/: package-lock.json  package.json  package.json.tmpl  tsconfig.json
apps/rook/src/: config.rs  dashboard.rs  di.rs  lib.rs  main.rs  server.rs  usage_retention.rs
apps/rook/tests/: alias_routing_e2e.rs  cache_e2e.rs  config_tests.rs  di_tests.rs  usage_retention_tests.rs
crates/application/rook-usecases/: Cargo.toml
crates/application/rook-usecases/src/: authenticate_client_api.rs  cost_estimation.rs  health_check.rs  lib.rs  manage_api_keys.rs  manage_connections.rs  manage_providers.rs  route_request.rs  router_impl.rs
crates/application/rook-usecases/tests/: api_key_provider_validation.rs  estimate_cost.rs  manage_connections_test_credentials.rs  retry_loop_tests.rs  route_request_restrictions.rs  route_request_telemetry_test.rs  router_circuit_states.rs
crates/domain/rook-core/: Cargo.toml
crates/domain/rook-core/src/: api_key.rs  decrypted_credentials.rs  lib.rs  model.rs  ports.rs  probes.rs  provider_connection.rs
crates/domain/shared-kernel/: Cargo.toml
crates/domain/shared-kernel/src/: error.rs  id.rs  lib.rs  rate_limit.rs  time_.rs
crates/infrastructure/audit-sqlite/: Cargo.toml
crates/infrastructure/audit-sqlite/src/: lib.rs
crates/infrastructure/auth-sqlite/: Cargo.toml
crates/infrastructure/auth-sqlite/src/: lib.rs
crates/infrastructure/cache-memory/: Cargo.toml
crates/infrastructure/cache-memory/src/: lib.rs
crates/infrastructure/db-migration/: Cargo.toml
crates/infrastructure/db-migration/src/: lib.rs
crates/infrastructure/observability/: Cargo.toml
crates/infrastructure/observability/src/: lib.rs  metrics.rs  telemetry.rs  tracing_.rs
crates/infrastructure/provider-sqlite/: Cargo.toml
crates/infrastructure/provider-sqlite/src/: lib.rs  migration.rs  repository.rs
crates/infrastructure/provider-utils/: Cargo.toml
crates/infrastructure/provider-utils/src/: error.rs  lib.rs  role.rs  token_bucket.rs
crates/infrastructure/providers-anthropic/: Cargo.toml
crates/infrastructure/providers-anthropic/src/: lib.rs
crates/infrastructure/providers-anthropic/tests/: provider.rs
crates/infrastructure/providers-gemini/: Cargo.toml
crates/infrastructure/providers-gemini/src/: lib.rs
crates/infrastructure/providers-gemini/tests/: provider.rs
crates/infrastructure/providers-groq/: Cargo.toml
crates/infrastructure/providers-groq/src/: lib.rs
crates/infrastructure/providers-groq/tests/: provider.rs
crates/infrastructure/providers-ollama/: Cargo.toml
crates/infrastructure/providers-ollama/src/: lib.rs
crates/infrastructure/providers-ollama/tests/: provider.rs
crates/infrastructure/providers-openai/: Cargo.toml
crates/infrastructure/providers-openai/src/: lib.rs  provider.rs
crates/infrastructure/providers-openai/tests/: error_mapping_tests.rs  provider.rs  test_helpers.rs
crates/infrastructure/transport-axum/: Cargo.toml
crates/infrastructure/transport-axum/src/: alias_routes.rs  anthropic_adapter.rs  api_key_dto.rs  authz.rs  bootstrap_helpers.rs  combo_dto.rs  combo_routes.rs  format_registry.rs  lib.rs  models_routes.rs  openai_adapter.rs  provider_dto.rs  provider_routes.rs  routes.rs
crates/infrastructure/transport-axum/tests/: alias_api.rs  api_key_routes.rs  api_models_dto.rs  auth_integration_tests.rs  bootstrap_routes.rs  cache_routes.rs  cache_routes_unified.rs  format_translation_integration.rs  health_circuit_visibility.rs  provider_routes.rs  telemetry_endpoints_test.rs  usage_handlers.rs  usage_query.rs  usage_routes.rs
(+803 files in other folders)
