[workspace]
resolver = "2"
members = [
    "crates/domain/shared-kernel",
    "crates/domain/rook-core",
    "crates/application/rook-usecases",
    "crates/infrastructure/transport-axum",
    "crates/infrastructure/auth-sqlite",
    "crates/infrastructure/cache-memory",
    "crates/infrastructure/audit-sqlite",
    "crates/infrastructure/observability",
    "crates/infrastructure/sse-stream",
    "crates/infrastructure/providers-openai",
    "crates/infrastructure/providers-anthropic",
    "crates/infrastructure/providers-ollama",
    "crates/infrastructure/providers-gemini",
    "crates/infrastructure/providers-groq",
    "crates/infrastructure/encryption-inmemory",
    "crates/infrastructure/provider-sqlite",
    "crates/infrastructure/db-migration",
    "crates/infrastructure/models-catalog",
    "crates/infrastructure/combo-sqlite",
    "apps/rook",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["cortex team"]
rust-version = "1.81"

[workspace.lints.rust]
exhaustive_tests = "warn"
# Treat unsafe code as a lint violation
unsafe_code = "deny"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -2 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
performance = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow certain lints that are noisy in real-world code
doc_markdown = "allow"
field_reassign_referential_borrow = "allow"
unnested_or_patterns = "allow"
unnecessary_struct_initialization = "allow"
unused_macro_rules = "allow"
redundant_closure_for_method_calls = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }
smol_str = { version = "0.3", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
opentelemetry = "0.22"

# Caching
dashmap = "6"
ttl_cache = "0.5"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP clients
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Config
toml = "1.1"
figment = { version = "0.10", features = ["toml"] }

# Utils
once_cell = "1"
parking_lot = "0.12"
dirs = "6"
rand = { version = "0.10", features = ["std_rng"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"

# Dev tools (installed via cargo install or as dependencies)
# cargo install cargo-hack cargo-udeps cargo-audit cargo-outdated cargo-llvm-cov cargo-spellcheck
