[package]
name = "rook"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "rook"
path = "src/main.rs"



[dependencies]
shared-kernel = { path = "../../crates/domain/shared-kernel" }
rook-core = { path = "../../crates/domain/rook-core" }
rook-usecases = { path = "../../crates/application/rook-usecases" }
transport-axum = { path = "../../crates/infrastructure/transport-axum" }
cache-memory = { path = "../../crates/infrastructure/cache-memory" }
audit-sqlite = { path = "../../crates/infrastructure/audit-sqlite" }
observability = { path = "../../crates/infrastructure/observability" }
providers-openai = { path = "../../crates/infrastructure/providers-openai" }
providers-anthropic = { path = "../../crates/infrastructure/providers-anthropic" }
providers-ollama = { path = "../../crates/infrastructure/providers-ollama" }
providers-gemini = { path = "../../crates/infrastructure/providers-gemini" }
providers-groq = { path = "../../crates/infrastructure/providers-groq" }
encryption-inmemory = { path = "../../crates/infrastructure/encryption-inmemory" }
provider-sqlite = { path = "../../crates/infrastructure/provider-sqlite" }
auth-sqlite = { path = "../../crates/infrastructure/auth-sqlite" }
db-migration = { path = "../../crates/infrastructure/db-migration" }
models-catalog = { path = "../../crates/infrastructure/models-catalog" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
bytes = "1"
rust-embed = "8"
mime = "0.3"
mime_guess = "2"
toml = "1.1"
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
is-terminal = "0.4"
dotenvy = "0.15"
rand = "0.8"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
