[package]
name = "rook-usecases"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"

# Errors
thiserror = "2"
anyhow = "1"
ring = "0.17"

# DashMap for circuit breaker
dashmap = "6"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Random (for WeightedRandom routing)
rand = "0.8"
