[package]
name = "rook-usecases"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
metrics = "0.24"

# Errors
thiserror = "2"
anyhow = "1"
ring = "0.17"

# DashMap for circuit breaker
dashmap = "6"

# Parking lot RwLock (sync, no async needed for interior mutability)
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Random (for WeightedRandom routing)
rand = "0.10"

# SHA-256 for session token hashing
sha2 = "0.11"

# Constant-time comparison for secrets
subtle = "2"

# Base64 for token encoding
base64 = "0.22"

# Hex encoding for digest output
hex = "0.4"
