[package]
name = "rook-core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../shared-kernel" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
