[package]
name = "audit-sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Errors
thiserror = "2"
anyhow = "1"
