[package]
name = "observability"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
opentelemetry = "0.32"
opentelemetry-otlp = "0.32"

# Async
tokio = { version = "1", features = ["rt", "macros"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Concurrent storage
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
