[package]
name = "provider-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }
thiserror = "2"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Serialization (needed for sanitize_error_body JSON redaction)
serde = { version = "1", features = ["derive"] }
serde_json = "1"