[package]
name = "providers-groq"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }
providers-core = { path = "../providers-core" }

async-trait = "0.1"
async-stream = "0.3"
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
sse-stream = { path = "../sse-stream" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"