[package]
name = "providers-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }

async-trait = "0.1"
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
