[package]
name = "providers-openai"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
