[package]
name = "transport-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }
rook-usecases = { path = "../../application/rook-usecases" }

# Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for health checks to upstream)
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
