[package]
name = "transport-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../../domain/shared-kernel" }
rook-core = { path = "../../domain/rook-core" }
rook-usecases = { path = "../../application/rook-usecases" }

# Web
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
ring = "0.17"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for health checks to upstream)
reqwest = { version = "0.12", features = ["json"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
